Modified my name and title.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        
+
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
 
@@ -23,7 +23,7 @@
 
         <div class="header-container">
             <header class="wrapper clearfix" id="title">
-                <h1 class="title">Antonio Argote Bertely</h1>
+                <h1 class="title">Mr. Argote</h1>
                 <h2></h2>
                 <nav>
                     <ul>
@@ -40,7 +40,7 @@
 
                 <article>
                     <header id="header">
-                        <h1>Teacher</h1>
+                        <h1>a.k.a. Señor Argote</h1>
                         <p>
                           I got my start teaching English to a small class of salesmen and executives fourteen years ago, after completing my TOEFL training. When I moved to Taiwan eight years ago I continued working with adults in small classes and tutoring. Soon my students included children and teenagers. Four years ago I began my relationship with my two current employers: Tzu-Ming High School<sup><a href="#footnote1" id="tmhs">1</a></sup> and the J&amp;C English School.</p>
                           <p>
