minor rewordings in the copy

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <section id="section1">
                         <h2>About Me</h2>
                         <p>
-                          I'm a generalist. An early interest in scientific revolutions gave me an appreciation for the bigger picture. It was pursuing larger trends and seeking alien experience that I decided to move to Taiwan to learn Chinese. I try to approach the classroom with the same cautious spirit, hoping to be sensitive to the needs of my students to help them learn better ways of expressing themselves.</p>
+                          I'm a generalist. An early interest in science and its history gave me an appreciation for cross-disciplinary perspectives. It was pursuing larger trends and seeking alien experience that I decided to move to Taiwan to learn Chinese. I try to approach the classroom with the same cautious spirit, hoping to be sensitive to the needs of my students to help them learn better ways of expressing themselves.</p>
                         <p>
                           My focus has been aimed at some of the marvels of our era, chiefly perhaps cinema, globalization, and the web.</p>
                         <p>
@@ -64,7 +64,7 @@
                       <p>
                         <ul class="footnotes">
                           <li>
-                            <sup><a href="#politics">2</a></sup><a name="footnote2">A bachelor's in Political Science and International Relations from Tunghai University （東海大學）</a>
+                            <sup><a href="#politics">2</a></sup><a name="footnote2">in Political Science and International Relations from Tunghai University （東海大學）</a>
                           </li>
                           <li>
                             <sup><a href="#mba">3</a></sup><a name="footnote3"> from Providence University （靜宜大學） </a>
